--- a/src/app/quotes/quote-list.component.css
+++ b/src/app/quotes/quote-list.component.css
@@ -11,3 +11,13 @@
 .vote:hover {
   cursor: pointer;
 }
+
+.card {
+  margin-bottom: 1em;
+}
+
+@media all and (max-width: 370px) {
+  .quote-meta {
+    flex-direction: column;
+  }
+}
