Add initial changses for add quote

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<nav class='navbar navbar-expand navbar-light bg-light'>
+<nav class='navbar navbar-light bg-light'>
   <a class='navbar-brand'>{{pageTitle}}</a>
-  <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    </form>
+  <button type="button" class="btn"><i class="fa fa-fw fa-plus"></i> Add Quote</button>
 </nav>
 <div class="container">
+  <input class="form-control mr-sm-2 search" type="search" placeholder="Search" aria-label="Search">
   <ql-quotes></ql-quotes>
 </div>
