--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class='navbar navbar-light bg-light'>
   <a class='navbar-brand'>{{pageTitle}}</a>
-  <button type="button" class="btn"><i class="fa fa-fw fa-plus"></i> Add Quote</button>
+  <app-quote-list-form></app-quote-list-form>
 </nav>
 <div class="container">
   <input class="form-control mr-sm-2 search" type="search" placeholder="Search" aria-label="Search">
